[tool.poetry]
name = "ttach-sagat"
version = "0.1.0"
description = ""
authors = ["Luigi <luigigreselin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
